--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 <body>
     <div class="apology-card">
         <h1>I'm So Sorry, My Love ❤️</h1>
-        <div class="hearts">💔➡️❤️🩹</div>
+        <div class="hearts">😭💗💔</div>
         <p class="message">
             My dearest Bayoutiiiiiii 😭😭😭💗<br><br>
             I never meant to hurt you. Every moment without your smile feels empty. 
